--- a/gbsplay/po/en.po
+++ b/gbsplay/po/en.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-12 23:57+0100\n"
+"POT-Creation-Date: 2003-12-13 05:06+0100\n"
 "PO-Revision-Date: 2003-12-12 21:16+0100\n"
 "Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
 "Language-Team: none\n"
@@ -171,10 +171,10 @@ msgstr "Untitled"
 #, c-format
 msgid ""
 "\n"
-"Catched signal %d, exiting...\n"
+"Caught signal %d, exiting...\n"
 msgstr ""
 "\n"
-"Catched signal %d, exiting...\n"
+"Caught signal %d, exiting...\n"
 
 #: gbsplay.c:577
 msgid ""
