No fuzzy matches by default. Only update pos if requested by user. Don't include line numbers in pos.

--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-13 05:06+0100\n"
+"POT-Creation-Date: 2003-12-14 15:15+0100\n"
 "PO-Revision-Date: 2003-12-12 21:16+0100\n"
 "Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
 "Language-Team: none\n"
@@ -16,111 +16,86 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: gbsxmms.c:129
 msgid "File Info: "
 msgstr "Dateiinformationen: "
 
-#: gbsxmms.c:156
 msgid "Subsong"
 msgstr "Subsong"
 
-#: gbsxmms.c:162
 msgid "Title"
 msgstr "Titel"
 
-#: gbsxmms.c:168
 msgid "Length    "
 msgstr "Länge    "
 
-#: gbsxmms.c:304
 msgid "File Info"
 msgstr "Dateiinformationen"
 
-#: gbsxmms.c:326
 msgid "Filename:"
 msgstr "Dateiname:"
 
-#: gbsxmms.c:341
 msgid "GBS Info"
 msgstr "GBS Info"
 
-#: gbsxmms.c:359
 msgid "Game:"
 msgstr "Spiel:"
 
-#: gbsxmms.c:369
 msgid "Artist:"
 msgstr "Komponist:"
 
-#: gbsxmms.c:379
 msgid "Copyright:"
 msgstr "Copyright:"
 
-#: gbsxmms.c:416
 msgid "Extended Info"
 msgstr "Erweiterte Informationen"
 
-#: gbsxmms.c:453
 msgid "Next"
 msgstr "Nächster"
 
-#: gbsxmms.c:459
 msgid "Prev"
 msgstr "Vorheriger"
 
-#: gbsxmms.c:465
 msgid "Save"
 msgstr "Speichern"
 
-#: gbsxmms.c:473
 msgid "Cancel"
 msgstr "Abbrechen"
 
-#: gbsxmms.c:526
 msgid "Error opening output plugin."
 msgstr "Konnte Ausgabeplugin nicht öffnen."
 
-#: gbsplay.c:266
 #, c-format
 msgid "Could not open /dev/dsp: %s\n"
 msgstr "Konnte /dev/dsp nicht öffnen: %s\n"
 
-#: gbsplay.c:270
 #, c-format
 msgid "fcntl(F_GETFL) failed: %s\n"
 msgstr "fcntl(F_GETFL) fehlgeschlagen: %s\n"
 
-#: gbsplay.c:272
 #, c-format
 msgid "fcntl(F_SETFL, flags&~O_NONBLOCK) failed: %s\n"
 msgstr "fcntl(F_SETFL, flags&~O_NONBLOCK) fehlgeschlagen: %s\n"
 
-#: gbsplay.c:277
 #, c-format
 msgid "ioctl(dspfd, SNDCTL_DSP_SETFMT, %d) failed: %s\n"
 msgstr "ioctl(dspfd, SNDCTL_DSP_SETFMT, %d) fehlgeschlagen: %s\n"
 
-#: gbsplay.c:282
 #, c-format
 msgid "ioctl(dspfd, SNDCTL_DSP_SPEED, %d) failed: %s\n"
 msgstr "ioctl(dspfd, SNDCTL_DSP_SPEED, %d) fehlgeschlagen: %s\n"
 
-#: gbsplay.c:286
 #, c-format
 msgid "Requested rate %dHz, got %dHz.\n"
 msgstr "Angeforderte Samplingrate ist %dHz, tatsächliche ist %dHz.\n"
 
-#: gbsplay.c:291
 #, c-format
 msgid "ioctl(dspfd, SNDCTL_DSP_STEREO, %d) failed: %s\n"
 msgstr "ioctl(dspfd, SNDCTL_DSP_STEREO, %d) fehlgeschlagen: %s\n"
 
-#: gbsplay.c:296
 #, c-format
 msgid "ioctl(dspfd, SNDCTL_DSP_SETFRAGMENT, %08x) failed: %s\n"
 msgstr "ioctl(dspfd, SNDCTL_DSP_SETFRAGMENT, %08x) fehlgeschlagen: %s\n"
 
-#: gbsplay.c:298
 msgid ""
 "No sound support on this platform.\n"
 "Use 'gbsplay -s' for stdout output."
@@ -128,8 +103,7 @@ msgstr ""
 "Tonausgabe wird auf dieser Platform nicht unterstützt.\n"
 "Benutze 'gbsplay -s' um die Daten auf die Standardausgabe zu lenken."
 
-#: gbsplay.c:307
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: %s [option(s)] <gbs-file> [start_at_subsong [stop_at_subsong] ]\n"
 "\n"
@@ -161,11 +135,9 @@ msgstr ""
 "  -z  Subsongs im Zufallsmodus abspielen\n"
 "  -Z  Subsongs gemischt abspielen (Wiederholungen möglich)\n"
 
-#: gbsplay.c:468
 msgid "Untitled"
 msgstr "Unbenannt"
 
-#: gbsplay.c:486
 #, c-format
 msgid ""
 "\n"
@@ -174,7 +146,6 @@ msgstr ""
 "\n"
 "Signal %d abgefangen, beende Ausführung...\n"
 
-#: gbsplay.c:577
 msgid ""
 "\n"
 "commands:  [p]revious subsong   [n]ext subsong   [q]uit player\n"
@@ -184,12 +155,10 @@ msgstr ""
 "Kommandos: [p] vorheriger Subsong  [n]ächster Subsong  [q] Player beenden\n"
 "           [ ] Pause/Wiederaufnahme   [1-4] Kanal unterdrücken"
 
-#: gbs.c:102
 #, c-format
 msgid "Subsong number out of range (min=0, max=%d).\n"
 msgstr "Subsong-Nummer ausserhalb des Wertebereichs (min=0, max=%d).\n"
 
-#: gbs.c:183
 #, c-format
 msgid ""
 "GBSVersion:     %d\n"
@@ -216,77 +185,58 @@ msgstr ""
 "ROM-Grösse:     0x%08x (%d Bänke)\n"
 "Subsongs:       %d\n"
 
-#: gbs.c:207
 #, c-format
 msgid "CRC32:\t\t0x%08x/0x%08x (%s)\n"
 msgstr "CRC32:\t\t0x%08x/0x%08x (%s)\n"
 
-#: gbs.c:209
 msgid "OK"
 msgstr "Korrekt"
 
-#: gbs.c:209
 msgid "Failed"
 msgstr "Fehlerhaft"
 
-#: gbs.c:214
 #, c-format
 msgid "Subsong %03d:\t"
 msgstr "Subsong %03d:\t"
 
-#: gbs.c:218
-#, fuzzy
 msgid "untitled"
 msgstr "Unbenannt"
 
-#: gbs.c:221
 #, c-format
 msgid "(%d seconds)\n"
 msgstr "(%d Sekunden)\n"
 
-#: gbs.c:224
 msgid "no timelimit"
 msgstr "Kein Zeitlimit"
 
-#: gbs.c:273 gbs.c:356
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open %s: %s\n"
-msgstr "Konnte /dev/dsp nicht öffnen: %s\n"
+msgstr "Konnte %s nicht öffnen: %s\n"
 
-#: gbs.c:363
 #, c-format
 msgid "Not a GBS-File: %s\n"
 msgstr "Keine GBS-Datei: %s\n"
 
-#: gbs.c:368
 #, c-format
 msgid "GBS Version %d unsupported.\n"
 msgstr "GBS Version %d wird nicht unterstützt.\n"
 
-#: gbs.c:405
 #, c-format
-msgid ""
-"Warning: Extended header found, but CRC does not match (0x%08x != 0x%08x).\n"
-msgstr ""
-"Warnung: Extended header gefunden, aber die Prüfsumme stimmt nicht (0x%08x !"
-"= 0x%08x).\n"
+msgid "Warning: Extended header found, but CRC does not match (0x%08x != 0x%08x).\n"
+msgstr "Warnung: Extended header gefunden, aber die Prüfsumme stimmt nicht (0x%08x != 0x%08x).\n"
 
-#: gbs.c:448
 #, c-format
 msgid "Warning: File CRC does not match (0x%08x != 0x%08x).\n"
 msgstr "Warnung: Dateiprüfsumme stimmt nicht überein (0x%08x != 0x%08x).\n"
 
-#: gbsinfo.c:25
 #, c-format
 msgid "Usage: %s <gbs-file>\n"
 msgstr "Benutzung: %s <GBS-Datei>\n"
 
-#: cfgparser.c:53
 #, c-format
 msgid "'%s' expected at %s line %d char %d.\n"
 msgstr "'%s' erwartet in %s Zeile %d Spalte %d.\n"
 
-#: cfgparser.c:137
 #, c-format
 msgid "Unknown option %s at %s line %d.\n"
 msgstr "Unbekannte Option %s in %s Zeile %d.\n"
