--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,7 +1,6 @@
-# English translations for PACKAGE package.
-# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# Tobias Diedrich <ranma@gmx.at>, 2003.
+# German translations for gbsplay.
+# Copyright (C) 2003 Tobias Diedrich <ranma@gmx.at>
+# This file is distributed under GNU GPL.
 #
 msgid ""
 msgstr ""
