--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-<<$Id: TODO,v 1.42 2003/12/18 17:13:33 ranma Exp $>>
+<<$Id: TODO,v 1.43 2003/12/19 21:47:05 mitch Exp $>>
 
 
 TODO list for gbsplay.
@@ -41,4 +41,6 @@ TODO list for gbsplay.
 
 (X)  clean up build process (rebuild only changed files)
 
-(x)  gettext support
+(X)  gettext support
+
+(X)  gbs2ogg.sh: fix script (wrong path to gbsinfo)
