swap "shuffle" and "random"

--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.6 2003/10/30 19:29:15 mitch Exp $
+.\" $Id: gbsplay.in.1,v 1.7 2003/12/26 12:37:24 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -41,10 +41,10 @@ Set silence timeout to \fIsilence\-timeout\fR seconds.  When a subsong contains 
 Display version number and exit.
 .TP
 \fI\-z\fR
-Play subsongs in random mode.  Every subsong will be played once in random order.
+Play subsongs in shuffle mode.  Every subsong will be played once in random order.
 .TP
 \fI\-Z\fR
-Play subsongs in shuffle mode.  Like random mode, but a subsong can be played multiple times.
+Play subsongs in random mode.  Like shuffle mode, but a subsong can be played multiple times.
 .SH "PARAMETERS"
 .TP
 \fIgbs\-file\fR
