--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -131,8 +131,8 @@ msgstr ""
 "  -t  Zeitlimit (%d Sekunden)\n"
 "  -T  Zeitlimit für Stille (%d Sekunden)\n"
 "  -V  Version anzeigen und Programm beenden\n"
-"  -z  Subsongs im Zufallsmodus abspielen\n"
-"  -Z  Subsongs gemischt abspielen (Wiederholungen möglich)\n"
+"  -z  Subsongs durcheinandergewürfelt abspielen\n"
+"  -Z  Subsongs zufällig abspielen (Wiederholungen möglich)\n"
 
 msgid "Untitled"
 msgstr "Unbenannt"
