--- a/gbsplay/HISTORY
+++ b/gbsplay/HISTORY
@@ -1,4 +1,4 @@
-<<$Id: HISTORY,v 1.8 2003/12/28 19:32:31 mitch Exp $>>
+<<$Id: HISTORY,v 1.9 2003/12/28 21:39:16 mitch Exp $>>
 
 
 gbsplay HISTORY
@@ -7,13 +7,15 @@ gbsplay HISTORY
 2003/12/28  -  0.0.4-pre1
 ~~~~~~~~~~~~~~~~~~~~~~~~~
 - gbsplay:
+  - changed -z and -Z description
+  - output endianess can be selected
+  - shuffled playlists are reproducible over playlist boundaries
+  - redraw screen after SIGSTOP/SIGCONT
   - allow -1 as subsong (plays default subsong)
   - improved buffer handling
-  - changed -z and -Z description
-  - shuffled playlists are reproducible over playlist boundaries
-  - output endianess can be selected
 
 - gbsxmms:
+  - fix GTK critical error and xmms segfault when closing xmms
   - builds on FreeBSD
 
 - gbsinfo:
